recursion.logo.lessons.recursion.logo.koch.Crab.scala.error
Crab:18: error: expected start of definition
	override def run() {
                 ^Crab:21: error: Unmatched closing brace '}' ignored here
}
^